--- a/css/styles.css
+++ b/css/styles.css
@@ -519,104 +519,24 @@ footer .footer-list {
 footer .footer-list__item {
   display: flex;
   flex-direction: column;
-  row-gap: 10px;
-}
-footer .footer-list__item_title {
-  font-size: 1rem;
-  font-weight: 500;
-  color: #2F3035;
+  row-gap: 20px;
 }
 footer .footer-list__item:first-child p {
-  font-size: 1.1rem;
+  font-size: 0.8rem;
   font-weight: 500;
   line-height: 24px;
-  width: 70%;
-  color: #2F3035;
+  width: 30%;
 }
 footer .footer-list__item:first-child form {
-  margin-top: 20px;
-  margin-bottom: 70px;
+  margin-top: 30px;
+  margin-bottom: 100px;
 }
 footer .footer-list__item:first-child form .form-mail {
-  padding: 8px 68px 8px 12px;
-}
-footer .footer-list__item:first-child form .form-btn {
-  padding: 10px 16px;
-  background-color: #1C62CD;
-  color: #fff;
-  border: none;
-  margin-left: -5px;
+  padding: 50px;
 }
 footer .footer-list__item:last-child {
   flex-direction: row;
   column-gap: 20px;
-}
-footer .footer-bottom {
-  padding-top: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-}
-footer .footer-bottom p {
-  display: flex;
-  width: 50%;
-  justify-content: space-between;
-  color: #2F3035;
-}
-@media (max-width: 1024px) {
-  footer {
-    margin-top: 30px;
-  }
-  footer .footer-list {
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  footer .footer-list__item {
-    width: 45%;
-    justify-content: center;
-  }
-  footer .footer-list__item:nth-child(1) form {
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-  }
-  footer .footer-list__item:nth-child(1) form .form-btn {
-    padding: 2% 3%;
-    margin-left: 0;
-  }
-}
-@media (max-width: 500px) {
-  footer .footer-list {
-    flex-wrap: nowrap;
-    flex-direction: column;
-    justify-content: center;
-    row-gap: 20px;
-  }
-  footer .footer-list__item {
-    text-align: center;
-    width: 95%;
-  }
-  footer .footer-list__item:nth-child(1) p {
-    width: 90%;
-    text-align: center;
-  }
-  footer .footer-list__item:nth-child(1) form {
-    margin-bottom: 0px;
-    flex-direction: row;
-    width: 90%;
-    margin: 0 auto;
-  }
-  footer .footer-list__item:nth-child(1) form .form-mail {
-    padding: 3% 2% 2% 3%;
-  }
-  footer .footer-list__item:nth-child(1) form .form-btn {
-    margin-left: 0;
-  }
-  footer .footer-bottom p {
-    text-align: center;
-    flex-direction: column;
-    width: 90%;
-  }
 }
 
 .sale-banner {
@@ -1049,4 +969,4 @@ footer .footer-bottom p {
   }
 }
 
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=styles.css.map */
