--- a/sass/main.css
+++ b/sass/main.css
@@ -360,7 +360,8 @@ header .close-check {
   .catalog-menu {
     margin-top: -10px;
     overflow-y: hidden;
-    column-gap: 20px;
+    -moz-column-gap: 20px;
+         column-gap: 20px;
   }
 }
 
@@ -399,6 +400,14 @@ header .close-check {
   padding: 15px 5% 15px 20px;
   background-color: #F0F0F4;
   color: #2F3035;
+}
+.search__form_input ::-moz-placeholder {
+  color: rgba(47, 48, 53, 0.5);
+  font-size: 0.8rem;
+}
+.search__form_input :-ms-input-placeholder {
+  color: rgba(47, 48, 53, 0.5);
+  font-size: 0.8rem;
 }
 .search__form_input ::placeholder {
   color: rgba(47, 48, 53, 0.5);
@@ -471,6 +480,12 @@ header .close-check {
   .search__form_input {
     width: 100%;
     background: #F0F0F4 url(/images/icons/search-icon.png) no-repeat 95%;
+  }
+  .search__form_input ::-moz-placeholder {
+    padding-right: 30px;
+  }
+  .search__form_input :-ms-input-placeholder {
+    padding-right: 30px;
   }
   .search__form_input ::placeholder {
     padding-right: 30px;
@@ -549,7 +564,8 @@ footer .footer-list__item:first-child form .form-btn {
 }
 footer .footer-list__item:last-child {
   flex-direction: row;
-  column-gap: 20px;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
 }
 footer .footer-bottom {
   padding-top: 20px;
@@ -842,7 +858,8 @@ footer .footer-bottom p {
   margin-bottom: 25px;
 }
 .popular__menu {
-  column-gap: 40px;
+  -moz-column-gap: 40px;
+       column-gap: 40px;
   display: flex;
 }
 .popular__menu .link-active {
@@ -867,7 +884,8 @@ footer .footer-bottom p {
   align-items: center;
   display: flex;
   justify-content: space-between;
-  column-gap: 30px;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
 }
 .popular__catalog .arrow-left {
   position: absolute;
@@ -960,7 +978,8 @@ footer .footer-bottom p {
   display: flex;
   justify-content: space-between;
   width: 100px;
-  column-gap: 20px;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
   margin: 0 auto;
 }
 .popular .dots__dot {
@@ -1047,6 +1066,4 @@ footer .footer-bottom p {
   .popular__btn {
     padding: 12px 15px;
   }
-}
-
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
